Update copyright year to 2025 in multiple Java files