@@ -1,12 +1,12 @@
-/*
- * Copyright 2023 the original author or authors.
- * <p>
+/**
+ * Copyright © 2025 CUI-OpenSource-Software (info@cuioss.de)
+ *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * <p>
- * https://www.apache.org/licenses/LICENSE-2.0
- * <p>
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -18,6 +18,7 @@ package de.cuioss.test.valueobjects.contract.support;
 import static de.cuioss.tools.string.MoreStrings.emptyToNull;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
+
 
 import de.cuioss.tools.string.Splitter;
 import lombok.EqualsAndHashCode;
@@ -52,7 +53,7 @@ public class MappingTuple {
         assertNotNull(emptyToNull(mapping), "Mapping must not be null");
         var splitted = Splitter.on(':').splitToList(mapping);
         assertEquals(2, splitted.size(), "Expected a String in the form of 'source:target' but was: " + mapping);
-        source = splitted.get(0);
+        source = splitted.getFirst();
         target = splitted.get(1);
         this.strategy = strategy;
     }
